2005-05-29 svu
	
	* libxklavier/xklavier.c,
	libxklavier/xklavier.h,
	libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_i18n.c,
	libxklavier/xklavier_dump.c,
	libxklavier/xklavier_private.h,
	libxklavier/xklavier_private_xmm.h,
	libxklavier/xklavier_props.c,
	libxklavier/xklavier_util.c,
	libxklavier/xklavier_xkb.c,
	libxklavier/xklavier_xmm.c,
	tests/test_config.c: patches for gcc4.
	Thanks to kmaraas

2005-03-11 svu
	
	* libxklavier/xklavier_xkb.c: fixed memory leak, precachedXkb.
	Thanks to kmaraas

2005-02-25 svu
	
	* NEWS: update for 2.0

2005-02-24 svu
	
	* libxklavier/xklavier_props.c: small warning eliminated

2005-01-07 svu
	
	* libxklavier: a lot of optimizations (and some small fixes)

2004-12-30 svu
	
	* libxklavier/xklavier_config_xkb.c: some memory leak nailed
	* libxklavier/xklavier.c,
	libxklavier/xklavier_evt.c,
	libxklavier/xklavier_private.h,
	libxklavier/xklavier_xmm.c: internal polish, 
	secondary layouts are managed through the root window property.
	* configure.in, NEWS: preparing 1.14

2004-12-27 svu
	
	* libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_private_xkb.h: A bit of restructuring
	in all XkbComponentNames-related functions. 
	Introducing some ... ugh, 'protected' functions.

2004-12-09 21:30  svu
	
	* libxklavier/xklavier_xkb.c, 
	libxklavier/xklavier_xmm.c: intoducing XKL_*_DISABLE
	envvars - for testing and related stuff. 
	It is just handy to have them.

2004-12-08 23:30  svu
	
	* libxklavier/xklavier_util.c, 
	libxklavier/xklavier_config_xkb.c: Fixing memory leaks.

2004-12-08 18:30  svu
	
	* configure.in, NEWS: Preparing 1.13

2004-12-07 01:30  svu
	
	* libxklavier, tests: introducing XklGetMaxNumGroups. 
	Another new call in API.

2004-12-07 00:20  svu
	
	* configure.in: using ac_x_includes to make configure
	work better. Improved backend checking and diagnostics.
	* autogen.sh: updating the version of tools

2004-12-02 21:47  svu
	
	* configure.in: xmodmap support is built by default

2004-12-02 21:20  svu